# twitch-chat-translator-overlay

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  MANIFEST.in  README.en.md  README.md  RELEASING.md  doctor.bat  doctor.sh  install.bat  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.bat  run.sh  run_cli.bat  run_tui.bat  update.bat  update.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
configs/: rules.example.yaml
jobs/: example_job.yaml
profiles/: default.yaml  layout_compact.yaml  layout_default.yaml  layout_mobile.yaml  render_default.yaml  render_fast.yaml  render_hq.yaml
reviews/: example_translation_review.tsv  example_translation_review.xlsx
scripts/: chat_parser.py  chat_window.py  common_utils.py  encode_options.py  env_bootstrap.py  fix_merge.py  job_config.py  job_wizard.py  layout_preset.py  media_health.py  overlay_config.py  process_util.py  quick_demo.py  render_cn_chat.py  render_perf.py  render_preset.py  run_meta.py  run_tests.py  support_report.py  task_events.py  task_results.py  translate_chat_openai.py  translation_support.py  tui_history.py  tui_models.py  tui_run.py  tui_task.py  twitch_chat_burn.py  twitch_download.py  twitch_download_transaction.py  twitch_download_types.py  ux_setup.py
tests/: conftest.py  helpers.py  test_audit_cli_clean.py  test_audit_fix_batch1.py  test_audit_html_parser.py  test_batch_b.py  test_bugfix_regressions.py  test_cli_flag_forward.py  test_concurrent_jobs.py  test_contract_regressions.py  test_core.py  test_deep_audit_fixes.py  test_doctor_import.py  test_download_transaction_recovery.py  test_env_bootstrap.py  test_export_import_safety.py  test_font_resolve.py  test_fps_probe_edges.py  test_html_variants.py  test_human_cli_workflows.py  test_job_config.py  test_leadin_duration.py  test_longterm_config_validation.py  test_longterm_download_security.py  test_longterm_packaging.py  test_longterm_runtime.py  test_longterm_security.py  test_longterm_user_workflows.py  test_max_cli_workflows.py  test_max_matrix.py  test_media_health.py  test_message_layout.py  test_multi_segment_merge.py  test_output_fps_separation.py  test_p0_interactive_coverage.py  test_p0_p1_p2.py  test_p1_media_pipeline_coverage.py  test_p1_tui_pipeline_coverage.py  test_p2_fixes.py  test_p2_hardening.py  (+14 more)
tests/fixtures/: dirty_translation.json  td_attr_reordered.html  td_author_class_single_quote.html  td_badge_mixed_quotes.html  td_comment_message_deleted.html  td_css_class_far_from_url.html  td_emote_attrs_single_quote.html  td_emote_class_extra_tokens.html  td_html_entities.html  td_minified.html  td_missing_timestamp.html  td_nested_span.html  td_third_party_emotes.html  test_chat.html  test_translation.json  twitch_web_chat.html  twitchdownloader_chat.html
translations/: example_translation.json
